testsuite/tests/parser/should_fail/readFail034.stderr

readFail034.hs:4:6: error:
    parse error on input ‘=’
